--- a/index.html
+++ b/index.html
@@ -18,9 +18,19 @@
 </head>
 
 <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <div id="app">
+        <header class="text-center my-5">
+            <h1>{{ title }}</h1>
+        </header>
+        <main>
+            <ul>
+                <li>
+
+                </li>
+            </ul>
+        </main>
+        <footer></footer>
+    </div>
     <!--Vue-->
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <!--Bootstrap JS-->
