--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
                                 v-model="newtodoContent" @keyup.enter="addNewTask(newtodoContent)">
                             <label for="floatingInputGroup1">Aggiungi alla lista</label>
                         </div>
-                        <button class="btn btn-primary w-25">Aggiungi alla lista</button>
+                        <button class="btn btn-primary w-25" @click="addNewTask(newtodoContent)">Aggiungi alla
+                            lista</button>
                         <button class="btn btn-danger w-25">Elimina tutti</button>
                     </div>
                 </div>
