--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
                 <div class="row flex-column w-100">
                     <div class="col">
                         <ul>
-                            <li class="fs-3 fw-medium" v-for="(todoItem, index) in todoList">
+                            <li class="fs-3 fw-medium" v-for="(todoItem, index) in todoList"
+                                :class="{done: todoItem.done}">
                                 {{todoItem.todoText}}
-                                <i class="bi bi-x-lg" @click=""></i>
+                                <i class="bi bi-x-lg" @click="deleteTask(index)"></i>
                             </li>
                         </ul>
                     </div>
@@ -41,7 +42,7 @@
                         </div>
                         <button class="btn btn-primary w-25" @click="addNewTask(newtodoContent)">Aggiungi alla
                             lista</button>
-                        <button class="btn btn-danger w-25">Elimina tutti</button>
+                        <button class="btn btn-danger w-25" @click="">Elimina tutti</button>
                     </div>
                 </div>
             </div>
